force-app/main/default/objects/Assortment/fields/cgcloud__Distribution__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Distribution__c</fullName>
    <description>Target Value for primary survey question &apos;Distribution&apos;.</description>
    <label>Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distributed</fullName>
            </value>
            <value>
                <fullName>Not Distributed</fullName>
            </value>
            <value>
                <fullName>Out of Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>