force-app/main/default/objects/Assortment/fields/cgcloud__Number_Of_Modules__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Number_Of_Modules__c</fullName>
    <description>Field to control that the maximum number of Listing_Modules__c related to the product assortment is not higher than 10.</description>
    <label>Number Of Modules</label>
    <summaryForeignKey>cgcloud__Listing_Module__c.cgcloud__Product_Assortment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>