force-app/main/default/objects/Assortment/fields/cgcloud__Obligatory__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Obligatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether this is a closed listing. Used by the system.</description>
    <inlineHelpText>Relevant only for Assortment List, to define closed listing.</inlineHelpText>
    <label>Obligatory</label>
    <type>Checkbox</type>
</CustomField>