force-app/main/default/objects/Assortment/fields/cgcloud__Product_Assortment_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Assortment_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to product assortment template.</description>
    <label>Product Assortment Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Product_Assortment_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Product_Assortment_Template__c</referenceTo>
    <relationshipLabel>Product Assortments</relationshipLabel>
    <relationshipName>Product_Assortments</relationshipName>
    <type>Lookup</type>
</CustomField>