force-app/main/default/objects/Assortment/fields/cgcloud__Sync_Pending__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sync_Pending__c</fullName>
    <description>Flagged to be relevant for this sync process.</description>
    <formula>IF( cgcloud__Version__c &lt;&gt;  cgcloud__Version_Off_Platform_APL__c , cgcloud__Product_Assortment_Template__r.cgcloud__Consider_For_APL_Generation__c, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync Pending</label>
    <type>Checkbox</type>
</CustomField>